[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cudnn-repro"
version = "0.1.0"
description = "Generate pytest repro commands from cuDNN Frontend logs"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
cudnn-repro = "cudnn_repro:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cudnn_repro*"]
